--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -12,7 +12,7 @@
     <!-- Compass -->
     <color name="compassAccuracyTitleColor">@color/gray4</color>
     <color name="compassAccuracyValueColor">@color/gray4</color>
-    <color name="compassArrow">@color/gray2</color>
+    <color name="compass">@color/white</color>
     <color name="compassDegrees">@color/white</color>
 
     <!-- Navigation Bar -->
