--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,12 +21,12 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="CompassArrow">
-        <item name="android:tint">@color/compassArrow</item>
+    <style name="Compass">
+        <item name="android:tint">@color/compass</item>
     </style>
 
     <style name="CompassDegrees">
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">48sp</item>
         <item name="android:textColor">@color/compassDegrees</item>
     </style>
 
