--- a/app/src/main/res/layout-large/compass_fragment.xml
+++ b/app/src/main/res/layout-large/compass_fragment.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:textSize="64sp"
+        android:textSize="160sp"
         tools:text="360°"/>
 
     <TextView
@@ -58,8 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/compass_accuracy_title"
-        android:textSize="12sp"/>
+        android:text="@string/compass_accuracy_title"/>
 
     <TextView
         android:id="@+id/compass_accuracy_accelerometer_text_view"
@@ -69,7 +68,7 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:text="@string/compass_accuracy_accelerometer"
-        android:textSize="12sp"/>
+        android:textSize="24sp"/>
 
     <TextView
         android:id="@+id/compass_accuracy_magnetometer_text_view"
@@ -80,6 +79,6 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:gravity="center"
         android:text="@string/compass_accuracy_magnetometer"
-        android:textSize="12sp"/>
+        android:textSize="24sp"/>
 
 </LinearLayout>
