--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="compassAccuracyTitleColor">@color/gray1</color>
     <color name="compassAccuracyValueColor">@color/gray1</color>
     <color name="compassBackground">@color/gray1</color>
-    <color name="compassDegrees">@color/black</color>
+    <color name="compassDegrees">@color/gray1</color>
     <color name="compassPin">@color/gray1</color>
 
     <!-- Navigation Bar -->
