--- a/app/src/main/res/layout/coordinates_degrees_decimal_fragment.xml
+++ b/app/src/main/res/layout/coordinates_degrees_decimal_fragment.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     style="@style/CoordinatesFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <io.trewartha.positional.AutoResizeTextView
@@ -10,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:gravity="bottom|center_horizontal"/>
+        android:gravity="bottom|center_horizontal"
+        tools:text="+100.00000"/>
 
     <io.trewartha.positional.AutoResizeTextView
         android:id="@+id/degrees_decimal_longitude_text_view"
@@ -18,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:gravity="top|center_horizontal"/>
+        android:gravity="top|center_horizontal"
+        tools:text="+100.00000"/>
 
     <TextView
         style="@style/CoordinatesFormatLabel"
