Rename compass view

--- a/app/src/main/res/layout-land/compass_fragment.xml
+++ b/app/src/main/res/layout-land/compass_fragment.xml
@@ -20,7 +20,7 @@
         android:layout_weight="1">
 
         <io.trewartha.positional.compass.CompassView
-            android:id="@+id/compass_degrees_image_view"
+            android:id="@+id/compass_view"
             style="@style/CompassBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
