--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,14 +10,14 @@
 
     <!-- Compass -->
 
-    <style name="CompassAccuracyTitle">
-        <item name="android:textColor">@color/compassAccuracyTitleColor</item>
+    <style name="CompassAttributeTitle">
+        <item name="android:textColor">@color/compassAttributeTitleColor</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="CompassAccuracyValue">
-        <item name="android:textColor">@color/compassAccuracyValueColor</item>
+    <style name="CompassAttributeValue">
+        <item name="android:textColor">@color/compassAttributeValueColor</item>
         <item name="android:textSize">12sp</item>
     </style>
 
@@ -108,10 +108,12 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_weight">.2</item>
         <item name="android:minHeight">64dp</item>
-        <item name="android:paddingEnd" tools:ignore="NewApi">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingEnd" tools:ignore="NewApi">@dimen/activity_horizontal_margin
+        </item>
         <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
-        <item name="android:paddingStart" tools:ignore="NewApi">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingStart" tools:ignore="NewApi">@dimen/activity_horizontal_margin
+        </item>
     </style>
 
     <style name="PositionStatRowLandscape" parent="PositionStatRow">
