Convert the coordinates fragments to Kotlin

--- a/app/src/main/res/layout/coordinates_degrees_decimal_fragment.xml
+++ b/app/src/main/res/layout/coordinates_degrees_decimal_fragment.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/degrees_decimal_latitude_text_view"
+        android:id="@+id/latitudeTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -15,7 +15,7 @@
         tools:text="+100.00000"/>
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/degrees_decimal_longitude_text_view"
+        android:id="@+id/longitudeTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
