--- a/app/src/main/res/layout/coordinates_mgrs_fragment.xml
+++ b/app/src/main/res/layout/coordinates_mgrs_fragment.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/mgrs_text_view"
+        android:id="@+id/coordinatesTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
