--- a/app/src/main/res/layout/coordinates_utm_fragment.xml
+++ b/app/src/main/res/layout/coordinates_utm_fragment.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/utm_zone_text_view"
+        android:id="@+id/zoneTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -15,7 +15,7 @@
         tools:text="10N"/>
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/utm_easting_text_view"
+        android:id="@+id/eastingTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -23,7 +23,7 @@
         tools:text="1234567m E"/>
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/utm_northing_text_view"
+        android:id="@+id/northingTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
