--- a/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
+++ b/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/degrees_minutes_seconds_latitude_text_view"
+        android:id="@+id/latitudeTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -15,7 +15,7 @@
         tools:text="-100° 60' 60&quot;"/>
 
     <io.trewartha.positional.AutoResizeTextView
-        android:id="@+id/degrees_minutes_seconds_longitude_text_view"
+        android:id="@+id/longitudeTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
