--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -10,7 +10,7 @@
     tools:context=".MainActivity">
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/main_bottom_navigation_view"
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -23,10 +23,10 @@
         tools:targetApi="lollipop"/>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/main_view_pager"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/main_bottom_navigation_view"
+        android:layout_above="@id/bottomNavigationView"
         android:layout_alignParentTop="true"
         android:elevation="0dp"
         tools:targetApi="lollipop"/>
