--- a/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
+++ b/app/src/main/res/layout/coordinates_degrees_minutes_seconds_fragment.xml
@@ -2,25 +2,28 @@
 <LinearLayout
     style="@style/CoordinatesFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <io.trewartha.positional.AutoResizeTextView
+    <TextView
         android:id="@+id/latitudeTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="bottom|center_horizontal"
+        app:autoSizeTextType="uniform"
         tools:text="-100° 60' 60&quot;"/>
 
-    <io.trewartha.positional.AutoResizeTextView
+    <TextView
         android:id="@+id/longitudeTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="top|center_horizontal"
+        app:autoSizeTextType="uniform"
         tools:text="-100° 60' 60&quot;"/>
 
     <TextView
