--- a/app/src/main/res/layout/coordinates_mgrs_fragment.xml
+++ b/app/src/main/res/layout/coordinates_mgrs_fragment.xml
@@ -2,15 +2,17 @@
 <LinearLayout
     style="@style/CoordinatesFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <io.trewartha.positional.AutoResizeTextView
+    <TextView
         android:id="@+id/coordinatesTextView"
         style="@style/Coordinates"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        app:autoSizeTextType="uniform"
         tools:text="MGRS"/>
 
     <TextView
