--- a/app/src/main/res/layout-large/position_fragment.xml
+++ b/app/src/main/res/layout-large/position_fragment.xml
@@ -50,8 +50,8 @@
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/settings_screen_lock_content_description"
             android:padding="16dp"
@@ -65,19 +65,34 @@
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@id/screenLockSwitch"
-            android:layout_toEndOf="@id/screenLockSwitch"
             android:layout_gravity="center"
             android:layout_margin="16dp"
+            android:layout_toEndOf="@id/screenLockSwitch"
+            android:layout_toRightOf="@id/screenLockSwitch"
             android:indeterminateOnly="true"/>
+
+        <ImageView
+            android:id="@+id/shareButton"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
+            android:layout_alignParentBottom="true"
+            android:layout_toLeftOf="@+id/copyButton"
+            android:layout_toStartOf="@+id/copyButton"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/settings_share_content_description"
+            android:padding="16dp"
+            android:src="@drawable/ic_share_black_24dp"
+            android:tint="@color/screenLockButtonTint"
+            android:translationZ="1dp"
+            tools:targetApi="lollipop"/>
 
         <ImageView
             android:id="@+id/copyButton"
             android:layout_width="58dp"
             android:layout_height="58dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/settings_copy_coordinates_content_description"
             android:padding="16dp"
