--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/main_bottom_navigation_position_menu_item"
+        android:id="@+id/positionNavMenuItem"
         android:enabled="true"
         android:icon="@drawable/ic_my_location_black_24dp"
         android:title="@string/position"
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/main_bottom_navigation_compass_menu_item"
+        android:id="@+id/compassNavMenuItem"
         android:enabled="true"
         android:icon="@drawable/ic_explore_black_24dp"
         android:title="@string/compass"
