Add a Map fragment that can follow the user's location

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,9 @@
     <color name="compassBackground">@color/gray1</color>
     <color name="compassDegrees">@color/gray1</color>
 
+    <!-- Map -->
+    <color name="map_attribution_tint">#40000000</color>
+
     <!-- Navigation Bar -->
     <color name="navigationBarBackground">@color/white</color>
     <color name="navigationBarIconTint">@color/gray1</color>
