--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -21,7 +21,7 @@
         app:menu="@menu/main_bottom_navigation"
         tools:targetApi="lollipop"/>
 
-    <android.support.v4.view.ViewPager
+    <io.trewartha.positional.UndraggableViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
