--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -4,6 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/mapNavMenuItem"
+        android:enabled="true"
+        android:icon="@drawable/ic_map_black_24dp"
+        android:title="@string/map"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/positionNavMenuItem"
         android:enabled="true"
         android:icon="@drawable/ic_my_location_black_24dp"
